# china-travel-mcp

./: LICENSE  README.md  pyproject.toml
.mcp/: server.json
src/china_travel_mcp/: __init__.py  server.py
